# LiteWMS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: database_module.h  litewms_sqlite_operation.h  reader.h
src/: database_module.cpp  litewms_sqlite_operation.cpp  main.cpp
test/: warehouse_data.parquet  warehouse_management_data.csv
